Работа над ошибками ТЗ проекта № 11